--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- icons link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- favicon link -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg">
+    <link rel="icon" type="image/x-icon" href="favicon.jpeg">
     <!-- lin for styles -->
     <link rel="stylesheet" href="aboutStyles.css">
     <title>About us</title>
