--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- link for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link for favicon -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg">
+    <link rel="icon" type="image/x-icon" href="favicon.jpeg">
     <!-- like for stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <!-- link for google fonts -->
@@ -90,7 +90,7 @@
         <P class="name">Echo Dot (5th Gen) Smart speaker with Alexa </P>
     </Div>
     <div class="mainProduct">
-        <img src="images/alexa.jpg" class="alexa">
+        <img src="alexa.jpg" class="alexa">
     </div>
    
     <div class="description">
@@ -168,7 +168,7 @@
         <div class="sound">
             <div class="soundAlexa">
                 <video height="600" width="700" autoplay muted loop>
-                    <source src="images/soundAlexa.mp4" type="video/mp4">
+                    <source src="soundAlexa.mp4" type="video/mp4">
                 </video>
             </div>
 
@@ -224,7 +224,7 @@
             
             <div class="description">
                 <video height="700" width="900" autoplay muted loop>
-                    <source src="images/helpAlexa.mp4" type="video/mp4">
+                    <source src="helpAlexa.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -270,7 +270,7 @@
 
                 <div class="description">
                     <video height="700" width="900" autoplay muted loop>
-                        <source src="images/lightBulb.mp4" type="video/mp4">
+                        <source src="lightBulb.mp4" type="video/mp4">
                     </video>
                 </div>
 
@@ -288,13 +288,13 @@
                 <p class="descText">With a simple tap you can pause a song, end a call, or <strong>stop a timer</strong>. <br/>
                      Need a few extra minutes of sleep? Just tap to snooze.
                 </p>
-                <img src="images/tapAlexa.jpg" class="tapPic">
+                <img src="tapAlexa.jpg" class="tapPic">
             </div>
         </div>
 
         <div class="description">
             <video height="700" width="950" autoplay muted loop>
-                <source src="images/privacyAlexa.mp4" type="video/mp4">
+                <source src="privacyAlexa.mp4" type="video/mp4">
             </video>
             <p class="descText2">Alexa and Echo devices are built with multiple layers of <a href="https://www.amazon.ca/b/ref=sxts_snpl_2_0_b05c64cc-8c1e-4273-8082-70187eab23bd?node=19314790011&pd_rd_w=Fjrgs&pf_rd_p=b05c64cc-8c1e-4273-8082-70187eab23bd&pf_rd_r=H5H76KG4H21YGFPJVW5S&pd_rd_r=1ea86023-3514-442c-8824-611a5e581721&pd_rd_wg=XDDyA&qid=1632517811">privacy protection</a>.
            </p>
@@ -305,7 +305,7 @@
         <P class="p1">Simple to set up and use</P>
             <div class="use">            
                 <div class="step1">
-                    <img src="images/step1.jpg" height="230px" width="300px">
+                    <img src="step1.jpg" height="230px" width="300px">
                     <div class="steps">
                         <h1>Step 1</h1>
                         <p class="stepDesc">Plug in Echo Dot</p>
@@ -313,7 +313,7 @@
                 </div>
 
                 <div class="step2">
-                    <img src="images/step2.jpg" height="230px" width="300px">
+                    <img src="step2.jpg" height="230px" width="300px">
                     <div class="steps">
                         <h1>Step 2</h1>
                         <p class="stepDesc">Connect to the internet<br/>
@@ -322,7 +322,7 @@
                 </div>
 
                 <div class="step3">
-                    <img src="images/step3.jpg" height="230px" width="300px">
+                    <img src="step3.jpg" height="230px" width="300px">
                     <div class="steps">
                         <h1>Step 3</h1>
                         <p class="stepDesc">Ask Alexa for music,<br/>
@@ -344,7 +344,7 @@
             <div class="row1">
                 <div class="earthDesc">
                     <div class="pic">
-                        <img src="images/material.png" height="100px" width="100px">
+                        <img src="material.png" height="100px" width="100px">
                     </div>
                     <div class="picDesc">
                         <h2>Materials</h2>
@@ -357,7 +357,7 @@
 
                 <div class="earthDesc">
                     <div class="pic">
-                        <img src="images/amt2.png" height="100px" width="100px">
+                        <img src="amt2.png" height="100px" width="100px">
                     </div>
                     <div class="picDesc">
                         <h2>Clean Energy</h2>
@@ -369,7 +369,7 @@
 
                 <div class="earthDesc">
                     <div class="pic">
-                        <img src="images/mat3.png" height="100px" width="100px">
+                        <img src="mat3.png" height="100px" width="100px">
                     </div>
                     <div class="picDesc">
                         <h2>Device Packaging</h2>
@@ -382,7 +382,7 @@
             <div class="row2">
                 <div class="earthDesc" style="margin-right: 100px;">
                     <div class="pic">
-                        <img src="images/mat4.png" height="100px" width="100px">
+                        <img src="mat4.png" height="100px" width="100px">
                     </div>
                     <div class="picDesc">
                         <h2>Part with Purpose</h2>
@@ -397,7 +397,7 @@
 
                 <div class="earthDesc">
                     <div class="pic">
-                        <img src="images/mat5.png" height="100px" width="100px">
+                        <img src="mat5.png" height="100px" width="100px">
                     </div>
                     <div class="picDesc">
                         <h2>Low Power Mode</h2>
