--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <!-- link for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link for favicon -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg">
+    <link rel="icon" type="image/x-icon" href="favicon.jpeg">
     <!-- link for stylesheet -->
     <link rel="stylesheet" href="contactStyles.css">
     <title>Contact us</title>
