--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <!-- link for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link for favicon -->
-    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg">
+    <link rel="icon" type="image/x-icon" href="favicon.jpeg">
     <!-- like for stylesheet -->
     <link rel="stylesheet" href="homeStyles.css">
     <title>My Amazon HomePage</title>
@@ -92,7 +92,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes & Fashion</h2>
-                <div class="box-img " style="background-image: url('images/box8_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box8_image.jpg');"></div>
                 <P>See More</P>
             </div>    
         </div>
@@ -100,7 +100,7 @@
         <div class="box2 box">
             <div class="box-content">
                 <h2>Kids' Toys</h2>
-                <div class="box-img " style="background-image: url('images/box7_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box7_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-img " style="background-image: url('images/box1_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box1_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
@@ -116,7 +116,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>HealthCare and Products</h2>
-                <div class="box-img " style="background-image: url('images/box2_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box2_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
@@ -124,7 +124,7 @@
         <div class="box5 box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img " style="background-image: url('images/box3_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box3_image.jpg');"></div>
                 <P>See More</P>
             </div>    
         </div>
@@ -132,7 +132,7 @@
         <div class="box6 box">
             <div class="box-content">
                 <h2>Gadgets and Devices</h2>
-                <div class="box-img " style="background-image: url('images/box4_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box4_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
@@ -140,7 +140,7 @@
         <div class="box7 box">
             <div class="box-content">
                 <h2>Beauty Products</h2>
-                <div class="box-img " style="background-image: url('images/box5_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box5_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
@@ -148,7 +148,7 @@
         <div class="box8 box">
             <div class="box-content">
                 <h2>Pets</h2>
-                <div class="box-img " style="background-image: url('images/box6_image.jpg');"></div>
+                <div class="box-img " style="background-image: url('box6_image.jpg');"></div>
                 <P>See More</P>
             </div>
         </div>
